# carbon_capture

./: .env.example  .gitignore  .pre-commit-config.yaml  area_viz.ipynb  built_differences.ipynb  data_functions.py  data_to_compressed.ipynb  download.ipynb  example.ipynb  example_plot.ipynb  forecast_plot.ipynb  fua_filter.ipynb  generate.py  land_use_raster.ipynb  lost_potential.ipynb  main.ipynb  matrix_adjust.ipynb  paper.ipynb  patch_urban.ipynb  plot.ipynb  pres_viz.ipynb  probabilities.ipynb  pyproject.toml  scenarios.ipynb  ssp.ipynb  test.ipynb  transitions.ipynb
afolu/: definitions.py  managers.py  partitions.py  resources.py
afolu/assets/: __init__.py  bbox.py  class_masks.py  common.py  constants.py  emissions.py  load.py  rasters.py  stats.py  zones.py
afolu/assets/plot/: __init__.py  area.py  emissions.py  transitions.py
afolu/assets/small/: __init__.py  area_forecast.py  areas.py  transitions.py
afolu/defs/: managers.py  partitions.py  resources.py
afolu/defs/assets/: bbox.py  class_masks.py  class_masks_ops.py  common.py  constants.py  emissions.py  load.py  rasters.py  stats.py  zones.py
afolu/defs/assets/large/: areas.py  transitions.py
afolu/defs/assets/plot/: area.py  emissions.py  transitions.py
afolu/defs/assets/small/: area_forecast.py  areas.py  transitions.py
dagster/: dagster.yaml
example/: circle_diagram.ipynb  requirements.txt
