[project]
name = "afolu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "contextily>=1.6.2",
    "dagster>=1.10.12",
    "dagster-dg-cli>=1.12.3",
    "dagster-webserver>=1.10.12",
    "earthengine-api>=1.5.13",
    "geedim>=1.9.0",
    "geemap>=0.35.3",
    "mpl-chord-diagram>=0.4.1",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "plotly>=6.0.1",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "setuptools>=80.7.0",
    "sisepuede",
    "toml>=0.10.2",
    "xarray>=2025.11.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.29.1",
    "ipykernel<7",
    "notebook>=7.4.2",
    "pre-commit>=4.2.0",
]

[tool.uv.sources]
sisepuede = { git = "https://github.com/RodolfoFigueroa/sisepuede/" }

[tool.basedpyright]
typeCheckingMode = "standard"
ignore = ["**/*.ipynb", "**/dagster/*"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "N803", "N806"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "afolu"
